# AulasAPI

./: .gitignore  README.md  dealers.json  generate_secrets.py  manage.py  pyproject.toml  requests.http  requirements.txt
AulasAPI/: asgi.py  settings.py  urls.py  wsgi.py
FilesAPI/: asgi.py  settings.py  urls.py  wsgi.py
GrandeBIAPI/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  apps.py  authentication.py  backends.py  context.py  middleware.py  models.py  queries.py  services.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_grouphierarchy_is_supergroup.py
dashboard/: admin.py  apps.py  models.py  queries.py  services.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py
integrations/: apps.py  models.py  urls.py  views.py
integrations/management/commands/: sync_client_data.py
locale/en/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
templates/rest_framework/: api.html
utils/: decorators.py  exceptions.py  formating.py
