[project]
name = "FilesAPI"
version = "0.0.1"
description = "Gerenciador de arquivos"
authors = [
    { name = "JoaoVLima", email = "joao@limadeveloper.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "django-treebeard (>=4.7.1,<5.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "pymysql (>=1.1.2,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "FilesAPI" }
]